# sdf

./: Cargo.toml  README.md  build.rs
shaders/sdf-shader/: Cargo.toml
shaders/sdf-shader/src/: arrayvec.rs  blit.rs  compute_renderer.rs  deriv.rs  diff.rs  extra.rs  grid.rs  inst.rs  interpreter.rs  lib.rs  main_render_pass.rs  old_sdf.rs  sdf.rs
shaders/sdf-shader/src/arithmetic/: affine.rs  deriv.rs  interval.rs  mod.rs
shaders/sdf-shader/src/sdf/: affine.rs  deriv.rs  diff.rs  mod.rs  regular.rs
shared/: Cargo.toml
shared/src/: affine.rs  inst.rs  interval.rs  lib.rs
src/: camera.rs  main.rs  op.rs  sdf.rs  shapes.rs  tree.rs
src/shaders/: sdf.frag  sdf.vert  sdf.wgsl  sosm.wgsl
src/tree/: eval.rs  eval_cpu.rs  eval_glsl.rs  fills.rs  mod.rs  operations.rs  shapes.rs
src/tree/cpu/: combinations.rs  fills.rs  mod.rs  shapes.rs
src/tree/gpu/: inst.rs  mod.rs
