[package]
name = "sdf"
version = "0.1.0"
authors = ["Lachlan Sneff <lachlan.sneff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release.build-override]
opt-level = 3
codegen-units = 16

[workspace]
members = [
    "shaders/sdf-shader"
]

[dependencies]
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs.git" }
ultraviolet = { version = "0.7.5", features = ["int", "mint"] }
mint = "0.5"
crevice = "0.5.0"
wgpu-subscriber = "0.1.0"
winit = "0.24.0"
pollster = "0.2.1"

[build-dependencies]
shaderc = "0.7.1"
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu.git", branch = "main" }

[patch.crates-io]
spirv_cross = { git = "https://github.com/lachlansneff/spirv_cross.git" }
