[package]
name = "sdf"
version = "0.1.0"
authors = ["Lachlan Sneff <lachlan.sneff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release.build-override]
opt-level = 3
codegen-units = 16

[workspace]
members = [
    "shaders/sdf-shader",
    "shared",
]

[dependencies]
shared = { path = "shared" }
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs.git", features = ["cross"], rev = "1de388afacee29fc2acb922f16081399839e57fa" }
ultraviolet = { version = "0.8.0", features = ["int", "mint"] }
mint = "0.5"
# crevice = "0.6.0"
wgpu-subscriber = "0.1.0"
winit = "0.24.0"
pollster = "0.2.1"
static_assertions = "1.1.0"

[build-dependencies]
shaderc = "0.7.1"
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu.git", branch = "main" }
cargo-emit = "0.1"

# [patch.crates-io]
# spirv_cross = { git = "https://github.com/lachlansneff/spirv_cross.git" }
