[package]
name = "shared"
version = "0.1.0"
authors = ["Lachlan Sneff <lachlan@charted.space>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# [target.'cfg(target_arch = "spirv")'.dependencies]
# glam = { version = "0.14", default-features = false, features = ["libm", "scalar-math", "spirv-std"] }

# [target.'cfg(not(target_arch = "spirv"))'.dependencies]
# ultraviolet = { version = "0.8.0", features = ["int", "mint"] }
