[package]
name = "sdf-shader"
version = "0.1.0"
authors = ["Lachlan Sneff <lachlan.sneff@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
spirv-std = { version = "0.4.0-alpha.1", features = ["const-generics"] }
glam = { version = "0.13", default-features = false, features = ["libm", "scalar-math"] }
