[package]
name = "sdf-shader"
version = "0.1.0"
authors = ["Lachlan Sneff <lachlan.sneff@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
shared = { path = "../../shared" }

spirv-std = { version = "0.4.0-alpha.4", features = ["const-generics"] }
spirv-std-macros = "0.4.0-alpha.4"
glam = { version = "0.14", default-features = false, features = ["libm", "scalar-math", "spirv-std"] }
static_assertions = "1.1.0"
